test-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: myapp
  labels:
    name: myapp
