simple_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: my-simple-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2S
