simple_service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: nginx-service
spec:
  ports:
  - port: 8555
    protocol: TCP
    targetPort: 8888
  selector:
    app: backend
