simple_service_expose_nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: nginx-service
spec:
  type: NodePort
  ports:
  - port: 8555
    protocol: TCP
    targetPort: 8888
    nodePort: 30000
  selector:
    app: backend
